WIP, do not work
upgrade to java 11, added JavaPoet as transitive dependency
more clarity.